kubernetes/apps/default/spark/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:ip-network
spec:
  ingressClassName: internal
  rules:
    - host: "spark.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master-svc
                port:
                  number: 80
  tls:
    - hosts:
        - "spark.${SECRET_DOMAIN}"
